kubernetes/fail2ban.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fail2ban
  namespace: default
spec:
  plugin:
    fail2ban:
      blacklist:
        ip:
          - 192.168.0.0/24
      rules:
        action: ""
        actionAbuseipdb: ""
        backend: ""
        banaction: ""
        banactionAllports: ""
        bantime: 3h
        chain: ""
        destemail: ""
        enabled: "true"
        fail2banAgent: ""
        filter: ""
        findtime: 10m
        ignorecommand: ""
        logencoding: UTF-8
        maxretry: "4"
        mode: ""
        mta: ""
        ports: 0:8000
        protocol: ""
        sender: ""
        urlregexp: ""
        usedns: ""
      whitelist:
        ip:
          - ::1
          - 127.0.0.1
