kubernetes/traefik-jwt.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-jwt-plugin
  namespace: default
spec:
  plugin:
    traefik-jwt-plugin:
      JwtHeaders:
        X-Subject: sub
      Keys:
        - |
          -----BEGIN PUBLIC KEY-----
          MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnzyis1ZjfNB0bBgKFMSv
[...]
          MwIDAQAB
          -----END PUBLIC KEY-----
      OpaAllowField: allow
      OpaBody: "true"
      OpaHeaders:
        X-Allowed: allow
      OpaHttpStatusField: allow_status_code
      OpaResponseHeaders:
        X-Allowed: allow
      OpaUrl: http://localhost:8181/v1/data/example
      PayloadFields:
        - exp
      Required: "true"
