kubernetes/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
   - port: 80
     targetPort: http
     name: http
  selector:
   app: api
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/jumpwire-ai/fintech-devcon-api:latest
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
