kubernetes/jumpwire.yaml

apiVersion: v1
kind: Service
metadata:
  name: jumpwire
  labels:
    app: jumpwire
spec:
  ports:
   - port: 80
     targetPort: http
     name: http
   - port: 443
     targetPort: https
     name: https
   - port: 5432
     targetPort: postgres
     name: postgres
  selector:
   app: jumpwire
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jumpwire
  labels:
    app: jumpwire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumpwire
  template:
    metadata:
      labels:
        app: jumpwire
    spec:
      volumes:
      - name: tls-cert
        secret:
          secretName: jumpwire-tls
      - name: config
        configMap:
          name: jumpwire-config
      containers:
      - name: jumpwire
        image: ghcr.io/extragoodlabs/jumpwire:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: tls-cert
          mountPath: /etc/tls
          readOnly: true
        - name: config
          mountPath: /etc/jumpwire
        ports:
        - containerPort: 4004
          name: http
        - containerPort: 4443
          name: https
        - containerPort: 5432
          name: postgres
        livenessProbe:
          httpGet:
            port: http
            path: /ping
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: http
            path: /ping
          initialDelaySeconds: 10
          periodSeconds: 10
